fix rsvp on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1661,6 +1661,9 @@ footer {
   background: #096d65 !important;
   color: white !important; }
 
+.modal {
+  overflow-y: scroll !important; }
+
 .modal-footer {
   margin-top: 20px; }
 
