--- a/scss/pages/_page-rsvp.scss
+++ b/scss/pages/_page-rsvp.scss
@@ -3,6 +3,10 @@
   color: white !important;
 }
 
+.modal {
+  overflow-y: scroll !important;
+}
+
 .modal-footer {
   margin-top: 20px;
 }
